--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,5 +1,14 @@
-FROM openjdk:17-jdk-alpine
-VOLUME /tmp
+# Use an official OpenJDK runtime as a parent image
+FROM openjdk:17-jdk-slim
+
+# Set the working directory inside the container
+WORKDIR /app
+
+# Copy the packaged .jar file into the container
+COPY target/travel-app-1.0.0.jar /app/travel-app.jar
+
+# Expose the port the app will run on
 EXPOSE 8080
-ADD target/travel-app.jar travel-app.jar
-ENTRYPOINT ["java", "-jar", "/travel-app.jar"]
+
+# Run the application
+ENTRYPOINT ["java", "-jar", "travel-app.jar"]
