--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,50 +1,69 @@
 # ===========================
 # Server Configuration
 # ===========================
-server.port=8080  # Set your server port (default is 8080)
+server.port=8080
+# Set your server port (default is 8080)
 
 # ===========================
 # Spring Data JPA (Database Configuration)
 # ===========================
-spring.datasource.url=jdbc:postgresql://localhost:5432/travel_app_db  # Update with your actual DB URL
-spring.datasource.username=your_username  # Set your database username
-spring.datasource.password=your_password  # Set your database password
-spring.datasource.driver-class-name=org.postgresql.Driver  # PostgreSQL JDBC driver
+spring.datasource.url=jdbc:postgresql://localhost:5432/travelapp
+# Corrected to the correct database URL
+spring.datasource.username=app_user
+# Updated with your database username
+spring.datasource.password=password
+# Updated with your database password
+spring.datasource.driver-class-name=org.postgresql.Driver
+# PostgreSQL JDBC driver
 
 # JPA (Java Persistence API) Configuration
-spring.jpa.hibernate.ddl-auto=update  # Automatically update schema, change to 'none' in production
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect  # PostgreSQL dialect
-spring.jpa.show-sql=true  # Show SQL queries in the console (set to false in production)
-spring.jpa.hibernate.format_sql=true  # Format SQL queries for readability
+spring.jpa.hibernate.ddl-auto=update
+# Automatically update schema, change to 'none' in production
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+# PostgreSQL dialect
+spring.jpa.show-sql=true
+# Show SQL queries in the console (set to false in production)
+spring.jpa.hibernate.format_sql=true
+# Format SQL queries for readability
 
 # ===========================
 # Spring Security Configuration (Optional - If you're using Security)
 # ===========================
-spring.security.user.name=admin  # Set the default username for basic auth (adjust as needed)
-spring.security.user.password=admin_password  # Set the default password for basic auth (adjust as needed)
+spring.security.user.name=admin
+# Set the default username for basic auth (adjust as needed)
+spring.security.user.password=admin_password
+# Set the default password for basic auth (adjust as needed)
 
 # ===========================
 # GraphQL Settings (Optional)
 # ===========================
-graphql.servlet.mapping=/graphql  # This maps the GraphQL endpoint to '/graphql'
-graphql.servlet.enabled=true  # Enable the GraphQL servlet
-graphql.tools.schema-location-pattern=classpath*:/graphql/**/*.graphqls  # Location of GraphQL schema files
+graphql.servlet.mapping=/graphql
+# This maps the GraphQL endpoint to '/graphql'
+graphql.servlet.enabled=true
+# Enable the GraphQL servlet
+graphql.tools.schema-location-pattern=classpath*:/graphql/**/*.graphqls
+# Location of GraphQL schema files
 
 # ===========================
 # Logging Configuration
 # ===========================
-logging.level.org.springframework=INFO  # Set the logging level for Spring classes
-logging.level.com.example.travelapp=DEBUG  # Set the logging level for your application classes (for debugging)
+logging.level.org.springframework=INFO
+logging.level.com.example.travelapp=DEBUG
 
 # ===========================
 # AWS Configuration (If you're using AWS services)
 # ===========================
-aws.accessKeyId=your-access-key-id  # AWS Access Key ID (for services like S3, DynamoDB, etc.)
-aws.secretAccessKey=your-secret-access-key  # AWS Secret Access Key
-aws.region=us-west-2  # AWS region
+aws.accessKeyId=your-access-key-id
+# AWS Access Key ID (for services like S3, DynamoDB, etc.)
+aws.secretAccessKey=your-secret-access-key
+# AWS Secret Access Key
+aws.region=us-west-2
+# AWS region
 
 # ===========================
 # Application Properties (Custom properties)
 # ===========================
-app.name=Travel Supplier Sync  # The name of your app (useful for logging, etc.)
-app.version=1.0.0  # The version of your app
+app.name=Travel Supplier Sync
+# The name of your app (useful for logging, etc.)
+app.version=1.0.0
+# The version of your app
