--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "@apollo/client": "^3.12.2",
-    "graphql": "^16.9.0"
+    "graphql": "^16.9.0",
+    "react-router-dom": "^7.0.2"
   }
 }
